--- a/index.html
+++ b/index.html
@@ -399,15 +399,13 @@
             </div>
             <form action="" name = "mail-subscription" class = "subscription">
                 <label for = "subscription-email" class = "footer__text">Подпишитесь на рассылку</label>
-                <div class = "subscription-container">
-                    <input type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
-                    <button type = "submit" class = "form-submit-button">
+                <div class = "subscription__container">
+                    <input class = "subscription__input" type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
+                    <button type = "submit" class = "subscription__button form-submit-button">
                         Подписаться
-                        <span>
-                            <svg class="footer-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-send"></use>
-                            </svg>
-                        </span>
+                        <svg class="subscription__icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
                     </button>
                 </div>
                 
@@ -417,52 +415,52 @@
 
     <!-- оверлей и модально окно -->
     <div class="modal-overlay is-hidden" data-modal>
-        <div class="modal-window">
-            <button class="modal-close-button" data-modal-close>
-                <svg width="18" height="18">
+        <div class="modal">
+            <button class="close-button" data-modal-close>
+                <svg class="close-button__icon" width="18" height="18">
                     <use href="./images/icons.svg#icon-crost"></use>
                 </svg>
             </button>
-            <p class = "modal-window-head">Оставьте свои данные, мы вам перезвоним</p>
+            <p class = "modal__text">Оставьте свои данные, мы вам перезвоним</p>
             <form action="" name = "modal-form">
-                <div class = "input-container">
-                    <input type="text" id = "name-input" name = "reqest-name" required>
-                    <label for="name-input">Имя</label>
-                    <svg width="18" height="18">
+                <div class = "modal-form__container">
+                    <input class="modal-form__input-box" type="text" id = "name-input" name = "reqest-name" required>
+                    <label class="modal-form__lable" for="name-input">Имя</label>
+                    <svg class = "modal-form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                 </div>
-                <div class = "input-container">
-                    <input type="tel" id = "phone-input" name="reqest-phone" required>
-                    <label for="phone-input">Телефон</label>
-                    <svg width="18" height="18">
+                <div class = "modal-form__container">
+                    <input class="modal-form__input-box" type="tel" id = "phone-input" name="reqest-phone" required>
+                    <label class="modal-form__lable" for="phone-input">Телефон</label>
+                    <svg class = "modal-form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                 </div>
-                <div class = "input-container">
-                    <input type="email" id = "mail-input" name = "reqest-email" required>
-                    <label for="mail-input">Почта</label>
-                    <svg width="18" height="18">
+                <div class = "modal-form__container">
+                    <input class="modal-form__input-box" type="email" id = "mail-input" name = "reqest-email" required>
+                    <label class="modal-form__lable" for="mail-input">Почта</label>
+                    <svg class = "modal-form__icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                 </div>
-                <div class = "input-container comment">
-                    <textarea name="reqest-comment" id="coment-input" cols="30" placeholder="Введите текст"></textarea>
-                    <label for="coment-input">Коментарий</label>
+                <div class = "modal-form__container">
+                    <textarea class="modal-form__input-box modal-form__textarea" class="modal-form__input-box" name="reqest-comment" id="coment-input" cols="30" placeholder="Введите текст"></textarea>
+                    <label class="modal-form__lable" for="coment-input">Коментарий</label>
                 </div>
                 <div class="checkbox">
-                    <input type="checkbox" id = "mailing-check" class = "checkbox-hidden">
-                    <label for="mailing-check">
-                        <div class="custom-checkbox">
-                            <svg width = "16" height = "15" class = "checkbox-na">
+                    <input type="checkbox" id = "mailing-check" class = "checkbox__input checkbox-hidden">
+                    <label class="checkbox__label" for="mailing-check">
+                        <div class="checkbox__custom-checkbox">
+                            <svg width = "16" height = "15" class = "checkbox__not-active">
                                 <use href="./images/icons.svg#icon-checkbox-na"></use>
                             </svg>
-                            <svg width = "16" height = "15" class = "checkbox-a">
+                            <svg width = "16" height = "15" class = "checkbox__active">
                                 <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </div>
                         <p>
-                            Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
+                            Соглашаюсь с рассылкой и принимаю <a class="checkbox__link" href="">Условия договора</a></label>
                         </p>
                 </div>
                 <button type="submit" class = "form-submit-button">Отправить</button>
