--- a/portfolio.html
+++ b/portfolio.html
@@ -16,42 +16,42 @@
     <title>Портфолио</title>
 </head>
 <body>
-    <header class="header">
-        <div class="container hedder-container">
-            <nav class="navigation">
+    <header class = "header">
+        <div class="hedder-container container" >
                 <!-- Логотип -->
-                <a class="logo" href=""><span>Web</span>Studio</a>
-                <ul class="navigation-links">
-                    <li class="item">
-                        <a class="link" href="./index.html">Студия</a>
+                <a class = "logo" href="./index.html"><span class="logo__span">Web</span>Studio</a>
+            <nav class = "navigation">
+                <ul  class = "navigation__list">
+                    <li class = "navigation__item">
+                        <a class = "navigation__link" href="/index.html">Студия</a>
                     </li>
-                    <li class="item">
-                        <a class="link is-active" href="./portfolio.html">Портфолио</a>
+                    <li class = "navigation___item">
+                        <a class = "navigation__link is-active" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="item">
-                        <a class="link" href="">Контакты</a>
+                    <li class = "navigation__item">
+                        <a class = "navigation__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <!-- контакты -->
-            <ul class="header-contacts">
-                <li class="item">
-                    <a class="link" href="mailto:info@devstudio.com">
-                        <svg class="icon-envelope" width="16" height="12">
-                            <use href="./images/icons.svg#icon-envelope"></use>
-                        </svg>
+            <ul class = "header-contacts">
+                <li class = "header-contacts__item">
+                    <a class = "header-contacts__link" href="mailto:info@devstudio.com">
+                            <svg class="header-contacts__icon" width="16" height="12">
+                                <use href="./images/icons.svg#icon-envelope"></use>
+                            </svg>                    
                         info@devstudio.com
-                    </a>
+                    </a>                
                 </li>
-                <li class="item">
-                    <a class="link" href="tel:+380961111111">
-                        <svg class="icon-envelope" width="10px" height="16px">
+                <li class = "header-contacts__item">
+                    <a class = "header-contacts__link" href="tel:+380961111111">
+                        <svg class="header-contacts__icon" width="10px" height="16px">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
                 </li>
-            </ul>
+            </ul>     
         </div>
     </header>
     <main>
@@ -207,69 +207,67 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <!-- Логотип -->
+    <footer class = "footer">
+        <!-- Логотип -->   
         <div class="container">
-            <div class="address-box">
-                <a class="logo" href=""><span>Web</span>Studio</a>
+            <div class = "address-container">
+                <a class="logo footer-logo" href=""><span class="logo__span">Web</span>Studio</a>
                 <address class="address">
-                    <ul class="address-list">
-                        <li class="item">
-                            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class = "address__list">
+                        <li class = "address__item">
+                            <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="item">
-                            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class = "address__item">
+                            <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class="item">
-                            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class = "address__item">
+                            <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
             </div>
-            <div class="icons-box">
-                <p class="footer-icons-title">присоединяйтесь</p>
-                <ul class="footer-icons-list">
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-instagram"></use>
+            <div class = "icons-box">
+                <p class = "footer__text">присоединяйтесь</p>
+                <ul class="sotial-links">
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-twitter"></use>
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-facebook"></use>
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-linkedin"></use>
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
             </div>
-            <form action="" name = "mail-subscription" class = "form-mail-subscription">
-                <label for = "subscription-email" class = "footer-icons-title">Подпишитесь на рассылку</label>
-                <div class = "subscription-container">
-                    <input type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
-                    <button type = "submit" class = "form-submit-button">
+            <form action="" name = "mail-subscription" class = "subscription">
+                <label for = "subscription-email" class = "footer__text">Подпишитесь на рассылку</label>
+                <div class = "subscription__container">
+                    <input class = "subscription__input" type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
+                    <button type = "submit" class = "subscription__button form-submit-button">
                         Подписаться
-                        <span>
-                            <svg class="footer-icon" width="24" height="24">
-                                <use href="images/icons.svg#icon-send"></use>
-                            </svg>
-                        </span>
+                        <svg class="subscription__icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
                     </button>
                 </div>
                 
