--- a/portfolio.html
+++ b/portfolio.html
@@ -61,145 +61,145 @@
                 <h1 class = "visually-hidden">Наши работы</h1>
                 <ul class = "buttons-list">
                     <li class = "item">
-                        <button class="button" type="button">Все</button>
+                        <button class="buttons-list__button" type="button">Все</button>
                     </li>
                     <li class = "item">
-                        <button class="button" type="button">Веб-сайты</button>
+                        <button class="buttons-list__button" type="button">Веб-сайты</button>
                     </li>
                     <li class = "item">
-                        <button class="button" type="button">Приложения</button>
+                        <button class="buttons-list__button" type="button">Приложения</button>
                     </li>
                     <li class = "item">
-                        <button class="button" type="button">Дизайн</button>
+                        <button class="buttons-list__button" type="button">Дизайн</button>
                     </li>
                     <li class = "item">
-                        <button class="button" type="button">Маркетинг</button>
+                        <button class="buttons-list__button" type="button">Маркетинг</button>
                     </li>
                 </ul>
                 <ul class="products">
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box1.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Технокряк</h2>
-                                <p class="products-text">Веб-сайт</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Технокряк</h2>
+                                <p class="products__text">Веб-сайт</p>
                             </div>   
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box2.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Постер New Orlean vs Golden Star</h2>
-                                <p class="products-text">Дизайн</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Постер New Orlean vs Golden Star</h2>
+                                <p class="products__text">Дизайн</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box3.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Ресторан Seafood</h2>
-                                <p class="products-text">Приложение</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Ресторан Seafood</h2>
+                                <p class="products__text">Приложение</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box4.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Проект Prime</h2>
-                                <p class="products-text">Маркетинг</p>
+                            <div class="products__container">
+                                <h2 class="products__title">Проект Prime</h2>
+                                <p class="products__text">Маркетинг</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box5.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Проект Boxes</h2>
-                                <p class="products-text">Приложение</p>
+                            <div class="products__container">
+                                <h2 class="products__title">Проект Boxes</h2>
+                                <p class="products__text">Приложение</p>
                             </div> 
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box6.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Inspiration has no Borders</h2>
-                                <p class="products-text">Веб-сайт</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Inspiration has no Borders</h2>
+                                <p class="products__text">Веб-сайт</p>
                             </div>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box7.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Издание Limited Edition</h2>
-                                <p class="products-text">Дизайн</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Издание Limited Edition</h2>
+                                <p class="products__text">Дизайн</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box8.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Проект LAB</h2>
-                                <p class="products-text">Маркетинг</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Проект LAB</h2>
+                                <p class="products__text">Маркетинг</p>
                             </div>                            
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "products-link">
-                            <div class="thumb">
+                    <li class = "products__item">
+                        <a href="" class = "products__link">
+                            <div class="products__thumb">
                                 <img src="./images/portfolio/box9.jpg" alt="" width="370" height="294">
-                                <div class="overlay">
-                                    <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                                <div class="products__overlay">
+                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
                                 </div>
                             </div>
-                            <div class="card-container">
-                                <h2 class="products-title">Growing Business</h2>
-                                <p class="products-text">Приложение</p>
+                            <div class="products__card-container">
+                                <h2 class="products__title">Growing Business</h2>
+                                <p class="products__text">Приложение</p>
                             </div>                            
                         </a>
                     </li>
